# qa-api

./: .env.example  Cargo.toml
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
migrations/: 20230416164908_account_table.down.sql  20230416164908_account_table.up.sql  20230425134948_answer_question_tables.down.sql  20230425134948_answer_question_tables.up.sql
src/: config.rs  lib.rs  store.rs
src/controllers/: answer.rs  authentication.rs  question.rs
src/controllers/authentication/: login.rs  mod.rs  registration.rs
src/custom_errors/: account.rs  common.rs  custom_error_recover.rs  mod.rs  repository.rs  store.rs
src/models/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
src/repository/: database_repository.rs  mock_repository.rs  repository.rs
src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
