[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qa-api = { path = "../",  version = "0.1.0" }
dotenv = "0.15.0"
tokio = { version = "1.1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
warp = "0.3.4"
async-trait = "0.1.68"
reqwest = { version = "0.11", features = ["json"] }
